[tool.poetry]
name = "mragent"
version = "0.2.5"
description = "MRAgent: An LLM-based Automated Agent for Causal Knowledge Discovery in Disease via Mendelian Randomization"
authors = ["XU WEI <xuwei_chn@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, !=3.9.7"
pandas = "^1.4.2"
reportlab = "^4.0.9"
pypdf2 = "^3.0.1"
numpy = "^1.19.5"
biopython = "^1.82"
requests = "^2.27.1"
bs4 = "^0.0.1"
openai = "^1.6.1"
ollama = "^0.1.8"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.44.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
